# king-of-the-sovereign

./: .gitignore  PLAN.md  README.md  instructions.md  instructions.txt  ppt.md
environment/: README.md  eval.sh  pyproject.toml  train.sh
environment/scripts/: _train_common.py  evaluate.py  evaluate_ppo_gat.py  evaluate_ppo_gnn.py  evaluate_recgat_ppo.py  random_rollout.py  run_ablations.py  test_gnn_smoke.py  train_a2c.py  train_all.py  train_dqn.py  train_ppo.py  train_ppo_gat.py  train_ppo_gnn.py  train_qrdqn.py  train_recurrent_gat.py  train_recurrent_ppo.py
environment/sovereign/: __init__.py  actions.py  config.py  defender.py  env.py  game_map.py  renderer.py  reward.py  state.py
environment/sovereign.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
environment/sovereign/dynamics/: __init__.py  economy.py  insurgency.py  military.py  neutral.py  political.py  terminal.py
environment/tests/: test_ablations.py  test_dynamics.py  test_env.py  test_map.py
models/: __init__.py  config_gnn.py  gat_policy.py  gnn_policy.py  graph_utils.py  obs_adapter.py  recurrent_gat_policy.py
notebooks/: eval_metrics.ipynb  log_parser.py
utils/: logging_utils.py
