[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign"
version = "0.1.0"
description = "Gymnasium-compatible strategic-simulation env for SOVEREIGN (CS 272)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SOVEREIGN Project" }]
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
]

[project.optional-dependencies]
train = [
    "stable-baselines3>=2.0",
    "sb3-contrib>=2.0",
    "torch>=2.0",
]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sovereign*"]
exclude = ["tests*", "scripts*"]
